<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">AndroidLabs</string>
  <string name="login">Login</string>
  <string name="enter_email">Enter your email address:</string>
  <string name="your_email">Your email:</string>
  <string name="enter_password">Type your password:</string>
  <string name="your_name">Your name:</string>
  <string name="enter_name">Enter your name</string>
  <string name="your_picture">Your picture:</string>
  <string name="take_picture">Click the button above to take a picture.</string>
  <string name="your_profile">Your profile</string>
  <string name="chat">Chat</string>
  <string name="send">Send</string>
  <string name="message">Message…</string>
  <string name="receive">Receive</string>
  <string name="delete">Do you want to delete this?</string>
  <string name="row">The selected row is: </string>
  <string name="database">The id in the database is: </string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="weather">Weather</string>
  <string name="currentTemp">Current Temperature</string>
  <string name="minTemp">Min. Temperature</string>
  <string name="maxTemp">Max. Temperature</string>
  <string name="uvRating">UV Rating</string>
  <string name="isSend">Is a sent message</string>
  <string name="hide">Hide</string>
  <string name="message_here">Message Here</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
